# infercode

./: .gitpod.yml  PKG-INFO  README.md  build_tensorflow.sh  demo.cast  demo.sh  i.sh  pypi  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup2.py  t.sh  test.py
infercode/: __main__.py
infercode/client/: base_client.py
infercode/configs/: default_config.ini
infercode/data_utils/: ast_parser.py
infercode/network/: infercode_network.py
scripts/: infercode
