[project]
name = "infercode"
version = "0.0.30"
authors = [
 {name = 'Nghi D. Q. Bui', email="bdqnghi@gmail.com"},
 {name = 'Yijun Yu', email="y.yu@open.ac.uk"},
 {name = 'Lingxiao Jiang', email="lxjiang@smu.edu.sg"}
]
dependencies = ['bidict>=0.21.2', 'coloredlogs>=15.0.1', 'dpu_utils>=0.2.19', 'keras_radam>=0.15.0', 'numpy>=1.19.4', 'protobuf>=3.14.0', 'scikit_learn>=0.24.0', 'scipy>=1.5.2', 'sentencepiece>=0.1.95', 'tensorflow>=2.4.0', 'tqdm>=4.55.1', 'tree_sitter==0.19.0', 'tree_sitter_parsers>=0.0.7', 'typing_extensions>=4.14.1', 'utils>=1.0.1']
classifiers = ['Development Status :: 3 - Alpha', 'License :: OSI Approved :: MIT License', 'Operating System :: OS Independent', 'Programming Language :: Python :: 3', 'Intended Audience :: Developers']
license = { file = "LICENSE-APACHE"}
readme = "README.md"
[build-system]
requires = ["setuptools==76.1.0", "wheel"]
build-backend = "setuptools.build_meta"
